# AgentAICoder

./: .gitignore  AgentAI_Agent_Flow_Diagram.drawio  Dockerfile  FRONTEND_COMPLETION_SUMMARY.md  GIT_STRATEGY.md  IMPLEMENTATION_STATUS_REPORT.md  LICENSE  LINKEDIN_POST.md  MCP_INTEGRATION.md  PROJECT_SPECIFICATION.md  README.md  SECURITY_FIXES.md  TESTING_GUIDE.md  app.py  debug_env.py  docker-compose.yml  hf_deploy.py  playwright.config.js  requirements.txt  setup_atlassian_auth.py  start.sh  stop.sh  test_diagram_extraction.py  test_xml_simple.py
coding-crew/: .env.example  .env.mcp.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  TEST_RESULTS.md  TEST_SPECIFICATION.md  TEST_STATUS.md  TEST_SUMMARY.md  analysis_output.md  architecture_review.md  config.py  docker-compose.prod.yml  docker-compose.yml  key.json  main.py  main_jira.py  pyproject.toml  test_xml_validation.py
coding-crew/agents/: adaptive_tech_agent.py  analysis_agent.py  analysis_crew.py  architecture_advisor.py  chat_assistant.py  code_quality_ai.py  crew_agents.py  crew_tasks.py  debugging_assistant.py  deployment_validation_crew.py  development_agents.py  development_crew.py  development_tasks.py  documentation_agents.py  documentation_crew.py  documentation_tasks.py  documentation_validator_crew.py  enhanced_development_crew.py  intelligent_documentation.py  intelligent_test_generator.py  jira_enhanced_agents.py  mcp_enhanced_agents.py  smart_refactoring.py  story_validation_crew.py  tech_specific_agents.py  test_cycle_crew.py  testing_crew.py  (+3 more)
(+161 files in other folders)
