[project]
name = "coding-crew"
version = "0.1.0"
description = "AI Agent Crew for Code Generation with CrewAI and Ollama"
authors = [{name = "AgentAI", email = "dev@agentai.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "crewai>=0.22.5",
    "langchain-community>=0.0.13",
    "langchain-ollama>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "ollama>=0.1.7",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "jira-mcp-server>=0.1.3",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
